# holdingcell

./: .gitignore  cuda-toolkit.sh  deps.sh  install_docker.sh  mpich.sh  nvidia-drivers.sh  pydeps.sh  setup.sh  tools.sh  webui-ai.sh  zsh-tmux.sh
local-cookbook/: .gitignore  README.md  check-system.sh  jailbreak_test_results.txt  pyproject.toml  test-k3s-cluster.sh
local-cookbook/.factory/droids/: kubernetes-deployment-specialist.md  kubernetes-helm-manifest-specialist.md
local-cookbook/docs/: QUICKSTART.md  README.md
local-cookbook/docs/commands/: README.md  backend-check.md
local-cookbook/docs/examples/: README.md
local-cookbook/docs/installation/: README.md
local-cookbook/docs/models/: README.md
local-cookbook/docs/usage/: README.md
local-cookbook/llm-comparisons/: .gitignore  README.md  pyproject.toml
local-cookbook/llm-comparisons/llm_comparisons/: base.py  config.py  llamacpp_runner.py  main.py  ollama_runner.py  orchestrator.py  reporter.py  vllm_runner.py
local-cookbook/local_cookbook/: cpu_checker.py  gpu_checker.py  llm_checker.py  main.py  model_db.py  quantized_recommender.py
local-cookbook/tests/: DEEPSEEK_V3.1_RECOMMENDATIONS.md  find_better_quantized_model.py  simple.py  test_jailbreak.py
