[project]
name = "local-cookbook"
version = "0.1.0"
description = "System resource checker and LLM compatibility analyzer"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "nvitop>=1.5.3",
    "openai>=2.7.1",
    "vllm>=0.11.0",
]

[project.scripts]
local-cookbook = "local_cookbook.main:cli"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
